Replace some `Collections` method calls by their `Map`, `Set` or `List` equivalent. The latter are immutable and check for null value.