@@ -82,7 +82,7 @@ public final strictfp class BufferedGridCoverageTest extends GridCoverage2DTest 
         final int nbTime = 3;
         final GridExtent extent = new GridExtent(null, null, new long[] {width, height, nbTime}, false);
         final GridGeometry domain = new GridGeometry(extent, PixelInCell.CELL_CENTER, MathTransforms.scale(2, 3, 5), null);
-        final SampleDimension band = new SampleDimension(Names.createLocalName(null, null, "Data"), null, Collections.emptyList());
+        final SampleDimension band = new SampleDimension(Names.createLocalName(null, null, "Data"), null, List.of());
         /*
          * Fill slices with all values set to 10, 11 and 12 at time t=0, 1 and 2 respectively.
          * All values are stored in a single bank.
