@@ -17,7 +17,6 @@
 package org.apache.sis.internal.map.coverage;
 
 import java.util.List;
-import java.util.Arrays;
 import java.util.Collections;
 import java.awt.image.RenderedImage;
 import org.opengis.geometry.DirectPosition;
@@ -110,10 +109,9 @@ public final strictfp class MultiResolutionCoverageLoaderTest extends TestCase {
 
         /** Returns the preferred resolutions in units of CRS axes. */
         @Override public List<double[]> getResolutions() {
-            return Arrays.asList(
-                    new double[] {2, 3, 1},
-                    new double[] {4, 4, 3},
-                    new double[] {8, 9, 5});
+            return List.of(new double[] {2, 3, 1},
+                           new double[] {4, 4, 3},
+                           new double[] {8, 9, 5});
         }
 
         /** Returns a grid geometry with the resolution of finest level. */
